# game

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml
assets/world/: Typical_TopDown_example.ldtk
src/: entity.rs  main.rs
src/player/: camera.rs  mod.rs  movement.rs  sprite.rs
src/world/: load.rs
