[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features = [
  "dynamic_linking",
  "file_watcher",
  "wayland",
] }
bevy_ecs_ldtk = "0.11.0"
#mediapipe-rs = { git = "https://github.com/WasmEdge/mediapipe-rs.git" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "debuginfo"
